--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .tree ul {
-    padding-top: 20px; position: relative;
+    padding-top: 20px;
+    position: relative;
 
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
@@ -7,7 +8,8 @@
 }
 
 .tree li {
-    float: left; text-align: center;
+    float: left;
+    text-align: center;
     list-style-type: none;
     position: relative;
     padding: 20px 5px 0 5px;
@@ -17,14 +19,19 @@
     -moz-transition: all 0.5s;
 }
 
-.tree li::before, .tree li::after{
+.tree li::before, .tree li::after {
     content: '';
-    position: absolute; top: 0; right: 50%;
+    position: absolute;
+    top: 0;
+    right: 50%;
     border-top: 1px solid #ccc;
-    width: 50%; height: 20px;
+    width: 50%;
+    height: 20px;
 }
-.tree li::after{
-    right: auto; left: 50%;
+
+.tree li::after {
+    right: auto;
+    left: 50%;
     border-left: 1px solid #ccc;
 }
 
@@ -32,29 +39,38 @@
     display: none;
 }
 
-.tree li:only-child{ padding-top: 0;}
+.tree li:only-child {
+    padding-top: 0;
+}
 
-.tree li:first-child::before, .tree li:last-child::after{
+.tree li:first-child::before, .tree li:last-child::after {
     border: 0 none;
 }
-.tree li:last-child::before{
+
+.tree li:last-child::before {
     border-right: 1px solid #ccc;
     border-radius: 0 5px 0 0;
     -webkit-border-radius: 0 5px 0 0;
     -moz-border-radius: 0 5px 0 0;
 }
-.tree li:first-child::after{
+
+.tree li:first-child::after {
     border-radius: 5px 0 0 0;
     -webkit-border-radius: 5px 0 0 0;
     -moz-border-radius: 5px 0 0 0;
 }
-.tree ul ul::before{
+
+.tree ul ul::before {
     content: '';
-    position: absolute; top: 0; left: 50%;
+    position: absolute;
+    top: 0;
+    left: 50%;
     border-left: 1px solid #ccc;
-    width: 0; height: 20px;
+    width: 0;
+    height: 20px;
 }
-.tree li div{
+
+.tree li div {
     border: 1px solid #ccc;
     padding: 5px 10px;
     text-decoration: none;
@@ -71,16 +87,21 @@
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
 }
-.tree li div:hover, .tree li div:hover+ul li div {
-    background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
+
+.tree li div:hover, .tree li div:hover + ul li div {
+    background: #c8e4f8;
+    color: #000;
+    border: 1px solid #94a0b4;
 }
-.tree li div:hover+ul li::after,
-.tree li div:hover+ul li::before,
-.tree li div:hover+ul::before,
-.tree li div:hover+ul ul::before{
-    border-color:  #94a0b4;
+
+.tree li div:hover + ul li::after,
+.tree li div:hover + ul li::before,
+.tree li div:hover + ul::before,
+.tree li div:hover + ul ul::before {
+    border-color: #94a0b4;
 }
-.row{
+
+.row {
     display: flex;
     flex-direction: column;
 }
